# WritingAgents

./: README.md  pyproject.toml
data/: profiles.json
playground/: essay_coach_poc.py  essay_flow.html  essay_flow.html.html  simple1.py  test_input.py
playground/gui_v1/: essay_coach_poc_gui.py  helpers.py  ui.py
src/kids_writing_agent/: agents.py  crew.py  main.py  state.py
src/kids_writing_agent/config/: agents.yaml  tasks.yaml
src/kids_writing_agent/config/arch/: agents.yaml  main.py  tasks.yaml
src/kids_writing_agent/tools/: ask_student.py  profile_loader.py
