[project]
name = "kids_writing_agent"
version = "0.1.0"
description = "kids_writing_agent using crewAI"
authors = [{ name = "Your Name", email = "you@example.com" }]
requires-python = ">=3.10,<3.13"
dependencies = [
    "crewai[tools]>=0.119.0,<1.0.0"
]

[project.scripts]
kids_writing_agent = "kids_writing_agent.main:run"
run_crew = "kids_writing_agent.main:run"
train = "kids_writing_agent.main:train"
replay = "kids_writing_agent.main:replay"
test = "kids_writing_agent.main:test"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.crewai]
type = "crew"
